1.新增网点账号

--- a/chrome_extension/popup.html
+++ b/chrome_extension/popup.html
@@ -16,6 +16,17 @@
       </div>
     </header>
 
+    <!-- 账号类型选择 -->
+    <section class="type-section">
+      <div class="type-row">
+        <span class="type-label">账号类型</span>
+        <div class="type-buttons">
+          <button class="type-btn active" id="typeAgent" data-type="agent">代理区</button>
+          <button class="type-btn" id="typeNetwork" data-type="network">网点</button>
+        </div>
+      </div>
+    </section>
+
     <!-- 主开关 -->
     <section class="switch-section">
       <div class="switch-row">
