--- a/token_manager/static/management.html
+++ b/token_manager/static/management.html
@@ -71,6 +71,11 @@
                 <div class="list-header">
                     <h2>Token列表</h2>
                     <div class="filter-options">
+                        <div class="type-filter">
+                            <button class="filter-btn active" id="filter-all" data-type="all">全部</button>
+                            <button class="filter-btn" id="filter-agent" data-type="agent">代理区</button>
+                            <button class="filter-btn" id="filter-network" data-type="network">网点</button>
+                        </div>
                         <label class="checkbox-label">
                             <input type="checkbox" id="show-expired" checked>
                             显示已过期
